# open-rec

./: .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  check-component-size.mjs  check-doc-links.mjs  package.json  pnpm-lock.yaml  skills-lock.json  turbo.json
.cursor/: environment.json
.cursor/plans/: macos-recorder-editor_e6c59b8d.plan.md
.cursor/scripts/: cloud-bootstrap.sh
.github/workflows/: backend-checks.yml  backend-macos-checks.yml  frontend-checks.yml  release-artifacts.yml  unsigned-macos-build.yml
apps/desktop/: index.html  package.json  vite.config.ts
apps/landing/: package.json
docs/: CI_WORKFLOWS.md  FINAL_VALIDATION_STATUS.md  LOCAL_BUILD_TROUBLESHOOTING.md  MACOS_RUNTIME_VALIDATION_CHECKLIST.md  NICE_TO_HAVE_BACKLOG.md  PLAN_EXECUTION_CHECKLIST.md  README.md  RECOVERY_WARNING_PLAYBOOK.md  RUNTIME_TIMEOUT_OVERRIDES.md  UNSIGNED_MAC_INSTALL.md
scripts/: bump-desktop-version.mjs
src/: App.tsx
src-tauri/: Cargo.toml  Entitlements.plist  Info.plist  tauri.conf.json
src-tauri/binaries/: .gitkeep  ffmpeg-aarch64-apple-darwin  ffmpeg-x86_64-unknown-linux-gnu
src-tauri/capabilities/: default.json
src-tauri/src/: error.rs  lib.rs
src-tauri/src/export/: mod.rs
src-tauri/src/project/: mod.rs
src-tauri/src/recording/: recorder.rs  sources.rs
src/components/: ActiveExportBadge.tsx
src/hooks/: useAppRuntimeEvents.ts  useProject.ts
src/lib/: currentProjectStorage.ts  diskSpace.ts  errorMessage.ts  finalizationRetry.test.ts  finalizationRetry.ts  pendingFinalizationRetryStore.test.ts  pendingFinalizationRetryStore.ts  withTimeout.ts  (+6 more)
(+239 files in other folders)
