[package]
name = "open-rec"
version = "0.1.0"
description = "A macOS screen and camera recording app with editing capabilities"
authors = ["Tommaso"]
edition = "2021"

[lib]
name = "open_rec_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
log = "0.4"
env_logger = "0.11"
dirs = "5"

# ScreenCaptureKit bindings for macOS
[target.'cfg(target_os = "macos")'.dependencies]
screencapturekit = { version = "1", features = ["macos_15_0", "async"] }
